# Polish-Aspect

./: .gitignore  LICENSE.txt  README.md  annotate_sentences.py  pipeline.py  pyproject.toml  setup.py
ndl_aspect/: __init__.py  pipeline.py
ndl_aspect/DataPreparation/: Step01_extract_sentences.py  Step02_annotate_sentences.py  Step03_find_reflexives.py  Step04_prepare_corpus.py  Step05_extract_lemmas.py  Step06_extract_ngrams.py  Step07_prepare_cues_to_use.py  Step08_split.py  Step09_make_eventfiles.py
ndl_aspect/DataPreparation/DownloadedData/: all_tenses.csv  lemmas_sie.txt  outcome_index.csv
ndl_aspect/TrainNDL/: TrainNDL.py  __init__.py  top_N_Cues_from_weights.py
polish_aspect/: __init__.py  pipeline.py
polish_aspect/DataPreparation/: Step04_prepare_corpus.py  Step05_extract_lemmas.py  Step06_extract_ngrams.py  Step07_prepare_cues_to_use.py  Step08_split.py  Step09_make_eventfiles.py  __init__.py
polish_aspect/DataPreparation/DownloadedData/: aspectual_pairs.pickle
polish_aspect/TrainNDL/: TrainNDL.py  __init__.py  top_N_Cues_from_weights.py
